--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,14 @@
     padding-right: 100px;
     font-family: "Space Mono", monospace;
 }
+.text a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+.text a:visited{
+    text-decoration: none;
+    color: whitesmoke;
+}
 .discription{
     font-size: 24px;
     font-weight: 400;
@@ -66,10 +74,16 @@
         
     }
     .text{
-        /* flex-wrap: wrap; */
-        /* margin: 10px; */
         margin-top: 60px;
         padding-left: 0;
+    }
+    .text a{
+        text-decoration: none;
+        color: whitesmoke;
+    }
+    .text a:visited{
+        text-decoration: none;
+        color: whitesmoke;
     }
     .side-note{
         position: absolute;
