--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,3 +100,52 @@
         font-size: 18px;
     }
 }
+@media screen and (min-width: 576px) and (max-width:992px) {
+    .container{
+        flex-direction: column;
+        margin-left: 0px;
+        margin: 10px;
+    }
+    img{
+        width: 100%;
+        height: 100%;
+    }
+    .img{
+        position: relative;
+        left: 20px;
+        margin-left: 0;
+        
+    }
+    .text{
+        margin-top: 60px;
+        padding-left: 0;
+    }
+    .btn a{
+        text-decoration: none;
+        color: whitesmoke;
+    }
+    .btn a:visited{
+        text-decoration: none;
+        color: whitesmoke;
+    }
+    .side-note{
+        position: absolute;
+        left: 20px;
+    }
+    .title, .discription{
+        padding-right: 0;
+        
+    }
+    .title{
+        font-size: 48px;
+    }
+    .discription{
+        font-size: 18px;
+    }
+    .btn{
+        position: absolute;
+        left: 270px;
+        padding-top: 50px;
+    }
+    
+}
